--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="./styles/login.css">
     <title>Login Page</title>
 </head>
 <body>
@@ -15,13 +15,14 @@
     <div class="login">
       <h2>Login</h2>
       <div class="inputBx">
-        <input type="text" placeholder="Username">
+        <input id="username" type="text" placeholder="Username" required>
       </div>
       <div class="inputBx">
-        <input type="password" placeholder="Password">
+        <input id="password" type="password" placeholder="Password" required>
       </div>
       <div class="inputBx">
-        <input type="submit" value="Sign in">
+        <button type="submit" class="inputBx-submit" onclick="Login()">Sign In</button>
+        </a>
       </div>
       <div class="links">
         <a href="#">Forget Password</a>
@@ -29,7 +30,7 @@
       </div>
     </div>
   </div>              
- 
+ <script src="./javascript/login.js"></script>
 </body>
 </html>
 
